--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/VolumeRank/VolumeRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/VolumeRank/VolumeRank.cshtml
@@ -148,7 +148,14 @@
                                         <td class="c-cardTable__space"></td>
                                         <td class="c-cardTable__body" data-card-table-width="1/2">
                                             <div class="c-cardTable__title" data-length="5">交易所代碼</div>
-                                            <div class="c-cardTable__content">@item.ExchangeCode</div>
+                                            @if (item.ExchangeCode != null)
+                                            {
+                                                <div class="c-cardTable__content">@item.ExchangeCode</div>
+                                            }
+                                            else
+                                            {
+                                                <div class="c-cardTable__content">-</div>
+                                            }
                                         </td>
                                         <td class="c-cardTable__body" data-card-table-width="1/2">
                                             <div class="c-cardTable__title" data-length="5">市價<br>(日期)</div>
@@ -156,26 +163,49 @@
                                         </td>
                                         <td class="c-cardTable__body" data-card-table-width="1/2">
                                             <div class="c-cardTable__title" data-length="5">折溢價</div>
-                                            @if (item.DiscountPremium < 0)
-                                            {
-                                                <span class="o-fall">@item.DiscountPremium%</span>
-                                            }
-                                            else if (item.DiscountPremium == 0)
-                                            {
-                                                <span>@item.DiscountPremium%</span>
-                                            }
-                                            else
-                                            {
-                                                <span class="o-rise">@item.DiscountPremium%</span>
-                                            }
+                                            <div class="c-cardTable__content">
+                                                @if (item.DiscountPremium != null)
+                                                {
+                                                    if (item.DiscountPremium > 0)
+                                                    {
+                                                        <span class="o-rise">@item.DiscountPremium%</span>
+                                                    }
+                                                    else if (item.DiscountPremium == 0)
+                                                    {
+                                                        <span>@item.DiscountPremium%</span>
+                                                    }
+                                                    else
+                                                    {
+                                                        <span class="o-fall">@item.DiscountPremium%</span>
+                                                    }
+                                                }
+                                                else
+                                                {
+                                                    <span>-</span>
+                                                }
+                                            </div>
                                         </td>
                                         <td class="c-cardTable__body" data-card-table-width="1/2">
                                             <div class="c-cardTable__title" data-length="5">最新量</div>
-                                            <div class="c-cardTable__content">@item.LatestVolumeTradingVolumeFormat</div>
+                                            @if (item.LatestVolumeTradingVolumeFormat != null)
+                                            {
+                                                <div class="c-cardTable__content">@item.LatestVolumeTradingVolumeFormat</div>
+                                            }
+                                            else
+                                            {
+                                                <div class="c-cardTable__content">-</div>
+                                            }
                                         </td>
                                         <td class="c-cardTable__body" data-card-table-width="1/2">
                                             <div class="c-cardTable__title" data-length="5">最新量-10日量</div>
-                                            <div class="c-cardTable__content">@item.TenDayAverageVolumeFormat</div>
+                                            @if (item.TenDayAverageVolumeFormat != null)
+                                            {
+                                                <div class="c-cardTable__content">@item.TenDayAverageVolumeFormat</div>
+                                            }
+                                            else
+                                            {
+                                                <div class="c-cardTable__content">-</div>
+                                            }
                                         </td>
                                         <td class="c-cardTable__space"></td>
                                         <td class="c-cardTable__footer" data-card-table-width="@((item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability))) ? "2/3" : "1/1")">
