--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtfReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtfReturnView.cshtml
@@ -5,165 +5,186 @@
 
 @if (Model == null)
 {
-	return;
+    return;
 }
 
 
 @if (Model.NewETFs.Count() != 0)
 {
-	foreach (var item in Model.NewETFs)
-	{
-		if (item.ProductCode != null && item.ProductCode != "")
-		{
-			<tr class="c-cardTable__item u-nowrap@dt-only u-center@dt-only" data-product-id="@item.ProductCode">
-				<td class="c-cardTable__top"></td>
-				<td class="c-cardTable__header u-wrap@dt-only u-left@dt-only">
-					<div class="c-cardTable__content">
-						<div class="l-target">
-							<div class="l-target__name">
-								<a href="@Model.DetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.ProductCode @item.ProductName</a>
-							</div>
-							@if (item.ETFDiscountTags != null)
-							{
-								if (item.ETFDiscountTags.Length > 0)
-								{
-									<div class="l-target__additional">
-										<ul class="l-tag">
-											@foreach (var tag in item.ETFDiscountTags)
-											{
-												<li class="l-tag__item">
-													<span class="o-tag">@tag</span>
-												</li>
-											}
-										</ul>
-									</div>
-								}
-							}
-						</div>
-					</div>
-				</td>
-				<td class="c-cardTable__space"></td>
-				<td class="c-cardTable__body" data-card-table-width="1/2">
-					<div class="c-cardTable__title" data-length="5">交易所代碼</div>
-					<div class="c-cardTable__content">@item.ExchangeCode</div>
-				</td>
-				<td class="c-cardTable__body" data-card-table-width="1/2">
-					<div class="c-cardTable__title" data-length="5">市價<br>(日期)</div>
-					<div class="c-cardTable__content">
-						@if (item.MarketPriceFormat != null)
-						{
-							@item.MarketPriceFormat
+    foreach (var item in Model.NewETFs)
+    {
+        if (item.ProductCode != null && item.ProductCode != "")
+        {
+            <tr class="c-cardTable__item u-nowrap@dt-only u-center@dt-only" data-product-id="@item.ProductCode">
+                <td class="c-cardTable__top"></td>
+                <td class="c-cardTable__header u-wrap@dt-only u-left@dt-only">
+                    <div class="c-cardTable__content">
+                        <div class="l-target">
+                            <div class="l-target__name">
+                                <a href="@Model.DetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.ProductCode @item.ProductName</a>
+                            </div>
+                            @if (item.ETFDiscountTags != null)
+                            {
+                                if (item.ETFDiscountTags.Length > 0)
+                                {
+                                    <div class="l-target__additional">
+                                        <ul class="l-tag">
+                                            @foreach (var tag in item.ETFDiscountTags)
+                                            {
+                                                <li class="l-tag__item">
+                                                    <span class="o-tag">@tag</span>
+                                                </li>
+                                            }
+                                        </ul>
+                                    </div>
+                                }
+                            }
+                        </div>
+                    </div>
+                </td>
+                <td class="c-cardTable__space"></td>
+                <td class="c-cardTable__body" data-card-table-width="1/2">
+                    <div class="c-cardTable__title" data-length="5">交易所代碼</div>
+                    @if (item.ExchangeCode != null)
+                    {
+                        <div class="c-cardTable__content">@item.ExchangeCode</div>
+                    }
+                    else
+                    {
+                        <div class="c-cardTable__content">-</div>
+                    }
+                </td>
+                <td class="c-cardTable__body" data-card-table-width="1/2">
+                    <div class="c-cardTable__title" data-length="5">市價<br>(日期)</div>
+                    <div class="c-cardTable__content">
+                        @if (item.MarketPriceFormat != null)
+                        {
+                            @item.MarketPriceFormat
 
-							<br>
+                            <br>
 
-							<span class="t-date">@item.MarketPriceDateFormat</span>
-						}
-						else
-						{
-							<span>-</span>
-						}
-					</div>
-				</td>
-				<td class="c-cardTable__body" data-card-table-width="1/2">
-					<div class="c-cardTable__title" data-length="5">
-						幣別
-						<a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
-					</div>
-					<div class="c-cardTable__content">
-						@Html.CurrencyLink(null, item.CurrencyName)
-					</div>
-				</td>
-				<td class="c-cardTable__body" data-card-table-width="1/2">
-					<div class="c-cardTable__title" data-length="5">折溢價</div>
-					@if (item.DiscountPremiumFormat != null)
-					{
-						if (item.DiscountPremiumFormat > 0)
-						{
-							<div class="c-cardTable__content">
-								<span class="o-rise">@item.DiscountPremiumFormat%</span>
-							</div>
-						}
-						else if (item.DiscountPremiumFormat == 0)
-						{
-							<div class="c-cardTable__content">
-								<span>@item.DiscountPremiumFormat%</span>
-							</div>
-						}
-						else
-						{
-							<div class="c-cardTable__content">
-								<span class="o-fall">@item.DiscountPremiumFormat%</span>
-							</div>
-						}
-					}
-					else
-					{
-						<div class="c-cardTable__content">
-							<span>-</span>
-						</div>
-					}
-				</td>
-				<td class="c-cardTable__body" data-card-table-width="1/2">
+                            <span class="t-date">@item.MarketPriceDateFormat</span>
+                        }
+                        else
+                        {
+                            <span>-</span>
+                        }
+                    </div>
+                </td>
+                <td class="c-cardTable__body" data-card-table-width="1/2">
+                    <div class="c-cardTable__title" data-length="5">
+                        幣別
+                        <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
+                    </div>
+                    <div class="c-cardTable__content">
+                        @Html.CurrencyLink(null, item.CurrencyName)
+                    </div>
+                </td>
+                <td class="c-cardTable__body" data-card-table-width="1/2">
+                    <div class="c-cardTable__title" data-length="5">折溢價</div>
+                    @if (item.DiscountPremiumFormat != null)
+                    {
+                        if (item.DiscountPremiumFormat > 0)
+                        {
+                            <div class="c-cardTable__content">
+                                <span class="o-rise">@item.DiscountPremiumFormat%</span>
+                            </div>
+                        }
+                        else if (item.DiscountPremiumFormat == 0)
+                        {
+                            <div class="c-cardTable__content">
+                                <span>@item.DiscountPremiumFormat%</span>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="c-cardTable__content">
+                                <span class="o-fall">@item.DiscountPremiumFormat%</span>
+                            </div>
+                        }
+                    }
+                    else
+                    {
+                        <div class="c-cardTable__content">
+                            <span>-</span>
+                        </div>
+                    }
+                </td>
+                <td class="c-cardTable__body" data-card-table-width="1/2">
 
-					<div class="c-cardTable__title" data-length="5">6個月報酬</div>
-					@if (item.SixMonthReturnMarketPriceOriginalCurrencyFormat != null)
-					{
-						if (item.SixMonthReturnMarketPriceOriginalCurrencyFormat > 0)
-						{
-							<div class="c-cardTable__content">
-								<span class="o-rise">@item.SixMonthReturnMarketPriceOriginalCurrencyFormat%</span>
-							</div>
-						}
-						else if (item.SixMonthReturnMarketPriceOriginalCurrencyFormat == 0)
-						{
-							<div class="c-cardTable__content">
-								<span>@item.SixMonthReturnMarketPriceOriginalCurrencyFormat%</span>
-							</div>
-						}
-						else
-						{
-							<div class="c-cardTable__content">
-								<span class="o-fall">@item.SixMonthReturnMarketPriceOriginalCurrencyFormat%</span>
-							</div>
-						}
-					}
-					else
-					{
-						<div class="c-cardTable__content">
-							<span>-</span>
-						</div>
-					}
-				</td>
-				<td class="c-cardTable__body" data-card-table-width="1/2">
-					<div class="c-cardTable__title" data-length="5">投資標的</div>
-					<div class="c-cardTable__content">@item.InvestmentTargetName</div>
-				</td>
-				<td class="c-cardTable__body" data-card-table-width="1/2">
-					<div class="c-cardTable__title" data-length="5">風險屬性</div>
-					<div class="c-cardTable__content">@item.RiskLevel</div>
-				</td>
-				<td class="c-cardTable__space"></td>
-				<td class="c-cardTable__footer" data-card-table-width="@((item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability))) ? "2/3" : "1/1")">
-					<div class="c-cardTable__content">
-						<ul class="l-collect l-collect--divider@lt">
-							<li class="l-collect__item">
-								@Html.FocusButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.ETF, true)
-							</li>
-							<li class="l-collect__item">
-								@Html.CompareButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.ETF, true)
-							</li>
-						</ul>
-					</div>
-				</td>
-				<td class="c-cardTable__footer" data-card-table-width="1/3">
-					<div class="c-cardTable__content">
-						@if (item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability)))
-						{
-							@Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.ETF, true)
-						}
-					</div>
-				</td>
-			</tr>
-		}
-	}
+                    <div class="c-cardTable__title" data-length="5">6個月報酬</div>
+                    @if (item.SixMonthReturnMarketPriceOriginalCurrencyFormat != null)
+                    {
+                        if (item.SixMonthReturnMarketPriceOriginalCurrencyFormat > 0)
+                        {
+                            <div class="c-cardTable__content">
+                                <span class="o-rise">@item.SixMonthReturnMarketPriceOriginalCurrencyFormat%</span>
+                            </div>
+                        }
+                        else if (item.SixMonthReturnMarketPriceOriginalCurrencyFormat == 0)
+                        {
+                            <div class="c-cardTable__content">
+                                <span>@item.SixMonthReturnMarketPriceOriginalCurrencyFormat%</span>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="c-cardTable__content">
+                                <span class="o-fall">@item.SixMonthReturnMarketPriceOriginalCurrencyFormat%</span>
+                            </div>
+                        }
+                    }
+                    else
+                    {
+                        <div class="c-cardTable__content">
+                            <span>-</span>
+                        </div>
+                    }
+                </td>
+                <td class="c-cardTable__body" data-card-table-width="1/2">
+                    <div class="c-cardTable__title" data-length="5">投資標的</div>
+                    @if (item.InvestmentTargetName != null)
+                    {
+                        <div class="c-cardTable__content">@item.InvestmentTargetName</div>
+                    }
+                    else
+                    {
+                        <div class="c-cardTable__content">-</div>
+                    }
+                </td>
+                <td class="c-cardTable__body" data-card-table-width="1/2">
+                    <div class="c-cardTable__title" data-length="5">風險屬性</div>
+                    @if (item.RiskLevel != null)
+                    {
+                        <div class="c-cardTable__content">@item.RiskLevel</div>
+                    }
+                    else
+                    {
+                        <div class="c-cardTable__content">-</div>
+                    }
+                </td>
+                <td class="c-cardTable__space"></td>
+                <td class="c-cardTable__footer" data-card-table-width="@((item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability))) ? "2/3" : "1/1")">
+                    <div class="c-cardTable__content">
+                        <ul class="l-collect l-collect--divider@lt">
+                            <li class="l-collect__item">
+                                @Html.FocusButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.ETF, true)
+                            </li>
+                            <li class="l-collect__item">
+                                @Html.CompareButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.ETF, true)
+                            </li>
+                        </ul>
+                    </div>
+                </td>
+                <td class="c-cardTable__footer" data-card-table-width="1/3">
+                    <div class="c-cardTable__content">
+                        @if (item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability)))
+                        {
+                            @Html.SubscriptionButton(null, item.ProductCode, InvestTypeEnum.ETF, true)
+                        }
+                    </div>
+                </td>
+            </tr>
+        }
+    }
 }
