--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceETFRank/PerformanceEtfRankReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceETFRank/PerformanceEtfRankReturnView.cshtml
@@ -36,74 +36,108 @@
 			</td>
 			<td class="c-cardTable__space"></td>
 			<td class="c-cardTable__body" data-card-table-width="1/2">
-				<div class="c-cardTable__title" data-length="5">交易所代碼</div>
-				<div class="c-cardTable__content">@item.ExchangeCode</div>
-			</td>
-			<td class="c-cardTable__body" data-card-table-width="1/2">
-				<div class="c-cardTable__title" data-length="5">市價<br>(日期)</div>
-				<div class="c-cardTable__content">@item.MarketPrice<br><span class="t-date">@item.MarketPriceDateFormat</span></div>
-			</td>
-			<td class="c-cardTable__body" data-card-table-width="1/2">
-				<div class="c-cardTable__title" data-length="5">
-					幣別
-					<a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
-				</div>
-				<div class="c-cardTable__content">
-					@Html.CurrencyLink(null, item.CurrencyName)
-				</div>
-			</td>
-			<td class="c-cardTable__body" data-card-table-width="1/2">
-				<div class="c-cardTable__title" data-length="5">折溢價</div>
-				@if (item.DiscountPremium > 0)
-				{
-					<div class="c-cardTable__content">
-						<span class="o-rise">@item.DiscountPremium%</span>
-					</div>
-				}
-				else if (item.DiscountPremium == 0)
-				{
-					<div class="c-cardTable__content">
-						<span>@item.DiscountPremium%</span>
-					</div>
-				}
-				else
-				{
-					<div class="c-cardTable__content">
-						<span class="o-fall">@item.DiscountPremium%</span>
-					</div>
-				}
-			</td>
-			<td class="c-cardTable__body" data-card-table-width="1/2">
+			<div class="c-cardTable__title" data-length="5">交易所代碼</div>
+                @if (item.ExchangeCode != null)
+                {
+                    <div class="c-cardTable__content">@item.ExchangeCode</div>
+                }
+                else
+                {
+                    <div class="c-cardTable__content">-</div>
+                }
 
-				<div class="c-cardTable__title" data-length="5">6個月報酬</div>
-				@if (item.SixMonthReturnMarketPriceOriginalCurrency > 0)
-				{
-					<div class="c-cardTable__content">
-						<span class="o-rise">@item.SixMonthReturnMarketPriceOriginalCurrency%</span>
-					</div>
-				}
-				else if (item.SixMonthReturnMarketPriceOriginalCurrency == 0)
-				{
-					<div class="c-cardTable__content">
-						<span>@item.SixMonthReturnMarketPriceOriginalCurrency%</span>
-					</div>
-				}
-				else
-				{
-					<div class="c-cardTable__content">
-						<span class="o-fall">@item.SixMonthReturnMarketPriceOriginalCurrency%</span>
-					</div>
-				}
+            </td>
+            <td class="c-cardTable__body" data-card-table-width="1/2">
+                <div class="c-cardTable__title" data-length="5">市價<br>(日期)</div>
+                @if (item.MarketPrice != null)
+                {
+                    <div class="c-cardTable__content">@item.MarketPrice<br><span class="t-date">@item.MarketPriceDateFormat</span></div>
+                }
+                else
+                {
+                    <div class="c-cardTable__content">-</div>
+                }
+            </td>
+            <td class="c-cardTable__body" data-card-table-width="1/2">
+                <div class="c-cardTable__title" data-length="5">
+                    幣別
+                    <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
+                </div>
+                <div class="c-cardTable__content">
+                    @Html.CurrencyLink(null, item.CurrencyName)
+                </div>
+            </td>
+            <td class="c-cardTable__body" data-card-table-width="1/2">
+                <div class="c-cardTable__title" data-length="5">折溢價</div>
+                <div class="c-cardTable__content">
+                    @if (item.DiscountPremium != null)
+                    {
+                        if (item.DiscountPremium > 0)
+                        {
+                            <span class="o-rise">@item.DiscountPremium%</span>
+                        }
+                        else if (item.DiscountPremium == 0)
+                        {
+                            <span>@item.DiscountPremium%</span>
+                        }
+                        else
+                        {
+                            <span class="o-fall">@item.DiscountPremium%</span>
+                        }
+                    }
+                    else
+                    {
+                        <span>-</span>
+                    }
+                </div>
+            </td>
+            <td class="c-cardTable__body" data-card-table-width="1/2">
 
-			</td>
-			<td class="c-cardTable__body" data-card-table-width="1/2">
-				<div class="c-cardTable__title" data-length="5">投資標的</div>
-				<div class="c-cardTable__content">@item.InvestmentTargetName</div>
-			</td>
-			<td class="c-cardTable__body" data-card-table-width="1/2">
-				<div class="c-cardTable__title" data-length="5">風險屬性</div>
-				<div class="c-cardTable__content">@item.RiskLevel</div>
-			</td>
+                <div class="c-cardTable__title" data-length="5">6個月報酬</div>
+                <div class="c-cardTable__content">
+                    @if (item.SixMonthReturnMarketPriceOriginalCurrency != null)
+                    {
+                        if (item.SixMonthReturnMarketPriceOriginalCurrency > 0)
+                        {
+                            <span class="o-rise">@item.SixMonthReturnMarketPriceOriginalCurrency%</span>
+                        }
+                        else if (item.SixMonthReturnMarketPriceOriginalCurrency == 0)
+                        {
+                            <span>@item.SixMonthReturnMarketPriceOriginalCurrency%</span>
+                        }
+                        else
+                        {
+                            <span class="o-fall">@item.SixMonthReturnMarketPriceOriginalCurrency%</span>
+                        }
+                    }
+                    else
+                    {
+                        <span>-</span>
+                    }
+                </div>
+            </td>
+            <td class="c-cardTable__body" data-card-table-width="1/2">
+                <div class="c-cardTable__title" data-length="5">投資標的</div>
+                @if (item.InvestmentTargetName != null)
+                {
+                    <div class="c-cardTable__content">@item.InvestmentTargetName</div>
+                }
+                else
+                {
+                    <div class="c-cardTable__content">-</div>
+                }
+            </td>
+            <td class="c-cardTable__body" data-card-table-width="1/2">
+                <div class="c-cardTable__title" data-length="5">風險屬性</div>
+                @if (item.RiskLevel != null)
+                {
+                    <div class="c-cardTable__content">@item.RiskLevel</div>
+                }
+                else
+                {
+                    <div class="c-cardTable__content">-</div>
+                }
+            </td>
 			<td class="c-cardTable__space"></td>
 			<td class="c-cardTable__footer" data-card-table-width="@((item.AvailabilityStatus == "Y" && (item.OnlineSubscriptionAvailability == "Y" || string.IsNullOrEmpty(item.OnlineSubscriptionAvailability))) ? "2/3" : "1/1")">
 			<div class="c-cardTable__content">
