update:弱掃過濾sql相關關鍵字、五大產品id不合法或找不到產品導轉

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/BuyHouse.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/BuyHouse.cshtml
@@ -3596,15 +3596,9 @@
                 }
 
                 if (!SC_DATA.IsKycExpire) {
-                    if (SC_DATA.Risk == '1') {
-                        riskLevel = "'RR1','RR2'";
-                    } else if (SC_DATA.Risk == '2') {
-                        riskLevel = "'RR1','RR2','RR3','RR4'";
-                    } else if (SC_DATA.Risk == '3') {
-                        riskLevel = "'RR1','RR2','RR3','RR4','RR5'";
-                    }
+                    riskLevel = SC_DATA.Risk;
                 } else {
-                    riskLevel = "'RR1'";
+                    riskLevel = "4";
                 }
 
                 var token = $('input[name="__RequestVerificationToken"]').val();
@@ -3655,15 +3649,9 @@
                 }
 
                 if (!SC_DATA.IsKycExpire) {
-                    if (SC_DATA.Risk == '1') {
-                        riskLevel = "'RR1','RR2'";
-                    } else if (SC_DATA.Risk == '2') {
-                        riskLevel = "'RR1','RR2','RR3','RR4'";
-                    } else if (SC_DATA.Risk == '3') {
-                        riskLevel = "'RR1','RR2','RR3','RR4','RR5'";
-                    }
+                    riskLevel = SC_DATA.Risk;
                 } else {
-                    riskLevel = "'RR1'";
+                    riskLevel = "4";
                 }
 
                 var token = $('input[name="__RequestVerificationToken"]').val();
