--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
@@ -3595,15 +3595,9 @@
                 }
 
                 if (!SC_DATA.IsKycExpire) {
-                    if (SC_DATA.Risk == '1') {
-                        riskLevel = "'RR1','RR2'";
-                    } else if (SC_DATA.Risk == '2') {
-                        riskLevel = "'RR1','RR2','RR3','RR4'";
-                    } else if (SC_DATA.Risk == '3') {
-                        riskLevel = "'RR1','RR2','RR3','RR4','RR5'";
-                    }
+                    riskLevel = SC_DATA.Risk;
                 } else {
-                    riskLevel = "'RR1'";
+                    riskLevel = "4";
                 }
 
                 var token = $('input[name="__RequestVerificationToken"]').val();
@@ -3652,15 +3646,9 @@
                 }
 
                 if (!SC_DATA.IsKycExpire) {
-                    if (SC_DATA.Risk == '1') {
-                        riskLevel = "'RR1','RR2'";
-                    } else if (SC_DATA.Risk == '2') {
-                        riskLevel = "'RR1','RR2','RR3','RR4'";
-                    } else if (SC_DATA.Risk == '3') {
-                        riskLevel = "'RR1','RR2','RR3','RR4','RR5'";
-                    }
+                    riskLevel = SC_DATA.Risk;
                 } else {
-                    riskLevel = "'RR1'";
+                    riskLevel = "4";
                 }
 
                 var token = $('input[name="__RequestVerificationToken"]').val();
